# spendwise

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: cli.py  crud.py  database.py  main.py  models.py  movies_service.py  schemas.py
app/models/: movie.py
app/routes/: movies.py
app/schemas/: movie.py
app/services/: movies_service.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cli.py  database.py  main.py  worker.py
backend/app/core/: deps.py  security.py
backend/app/dals/: movies.py  transactions.py
backend/app/models/: transaction.py  user.py
backend/app/routes/: ai.py  auth.py  movies.py  transactions.py
backend/app/schemas/: movie.py  transaction.py  user.py
backend/app/services/: ai_service.py  transactions.py  transactions_service.py
backend/scripts/: demo.sh  refresh.py
backend/tests/: test_movies.py  test_refresh.py  test_security.py  test_transactions.py
data/: movies.csv
docs/: EX3-notes.md
docs/runbook/: compose.md
frontend/: Dockerfile  README.md  dashboard.py  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/app/: __init__.py  client.py  dashboard.py  main.py  styles.css
frontend/app/core/: client.py  shared.py
frontend/app/views/: ai_advisor.py  exports.py  manage.py  overview.py  reports.py
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Logo.tsx  ProtectedRoute.tsx
frontend/src/pages/: Login.tsx  (+5 more)
tests/: test_movies.py
(+4 files in other folders)
