[project]
name = "fastapi-movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "fastapi==0.121.1",
    "fpdf2>=2.8.5",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pluggy==1.6.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.12.0",
    "pygments==2.19.2",
    "pytest==9.0.0",
    "rich==14.2.0",
    "ruff>=0.14.10",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "starlette==0.49.3",
    "streamlit>=1.51.0",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.38.0",
]
